@@ -1,4 +1,4 @@
-CALLER ID NAME CODES DOC	Started: 2013-07-15	Updated: 2017-05-08
+CALLER ID NAME CODES DOC	Started: 2013-07-15	Updated: 2017-10-26
 
 
 This document is meant for reference only, and it does not contain all CID name codes possible, but more will be added over time.
@@ -26,3 +26,4 @@ ULGC - Hangup of lone channel in left 3way session (ULGC3620170222100923)
 BM - Real-time screen blind monitor (BM149425456200006666)
 BB - Real-time screen blind barge (BB149425456200006666)
 BW - Real-time screen blind whisper (BW149425456200006666)
+E - Inbound Email, tracking only (E0001797980001237995)
